# declarative

./: .gitignore  .mcp.json  Architecture.md  CLAUDE.md  ENTRYPOINT.md  KICKOFF_v0.4.md  LOOM_SCRIPT.md  Probe Results.md  README.md  ROADMAP.md  Technical Design Spec.md  package-lock.json  package.json  pyproject.toml  requirements.txt  schema.sql
archive/: README.md
audit/: architectural-flow-matrix-20260426.md
dd/: __init__.py  __main__.py  _timing.py  apply_render.py  ast_to_element.py  boundary.py  catalog.py  checkerboard.py  classify.py  classify_audit.py  classify_consensus.py  classify_dedup.py  classify_few_shot.py  classify_heuristics.py  classify_llm.py  classify_review.py  classify_rules.py  classify_skeleton.py  classify_v2.py  classify_vision.py  classify_vision_batched.py  classify_vision_crop.py  classify_vision_gemini.py  classify_vision_som.py  classify_vision_som_worker.py  cli.py  cluster.py  cluster_axis.py  cluster_colors.py  cluster_misc.py  cluster_spacing.py  cluster_typography.py  cluster_variants.py  color.py  compose.py  compress_l3.py  config.py  curate.py  curate_report.py  db.py  (+59 more)
declarative-design/: SKILL.md
docs/: DEPRECATION.md  README.md  action-taxonomy.md  architecture-decisions.md  architecture-v0.3.md  compiler-architecture.md  compression-profile.md  continuation-m7-classifier-next-session.md  continuation-post-april-cleanup.md  continuation-post-type-role-split.md  continuation-slot-visibility-grammar-next.md  continuation-synthetic-gen-handoff.md  continuation-v0.1.5-bridge.md  continuation-v0.1.5-week2.md  continuation.md  (+52 more)
(+1739 files in other folders)
