[project]
name = "declarative-design"
version = "0.1.0"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest", "pytest-xdist", "pytest-timeout", "pytest-cov", "ruff", "mypy"]
color = ["coloraide"]

# --- Ruff (linting + formatting) ---

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [".venv", "build", "dist", "__pycache__"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "UP",   # pyupgrade (modernize syntax)
    "B",    # bugbear (common pitfalls)
    "SIM",  # simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line-too-long — enforce via formatter, not linter
]

[tool.ruff.lint.isort]
known-first-party = ["dd"]

# --- mypy (type checking) ---

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true